removed text decoration from links

--- a/movie-api/app/components/header/header.css
+++ b/movie-api/app/components/header/header.css
@@ -1,14 +1,21 @@
 .nav {
     color: white; 
-    text-decoration: none; 
     background-color: antiquewhite;
     display:flex;
     justify-content: space-between;
     padding: 2rem;
     margin-bottom: 2rem;
-    font-size: x-large;
+}
+.nav a {
+    text-decoration: none; /* Remove default underline from links */
+  }
+p {
+    font-size: 40px;
     text-decoration: none;
-    color: inherit;
+    color: blue;
+}
+p:hover {
+    color:rgb(230, 80, 155);
 }
 
 
