mvp search function

--- a/movie-api/app/components/main/main.css
+++ b/movie-api/app/components/main/main.css
@@ -4,7 +4,7 @@
     color: blue;
     font-size: 60px;
     border-style: single;
-    background-color: antiquewhite;
+    background-color: rgb(238, 234, 229);
     width:600px;
     height:35px;
     line-height: 35px;
