--- a/movie-api/app/components/header/header.css
+++ b/movie-api/app/components/header/header.css
@@ -1,10 +1,10 @@
 .nav {
     color: white; 
-    background-color: antiquewhite;
+    background-color: rgb(248, 246, 244);
     display:flex;
     justify-content: space-between;
-    padding: 2rem;
-    margin-bottom: 2rem;
+    padding: 0.1rem;
+    margin:0 0 1rem 0;
 }
 .nav a {
     text-decoration: none; /* Remove default underline from links */
@@ -12,7 +12,8 @@
 p {
     font-size: 40px;
     text-decoration: none;
-    color: blue;
+    color: rgb(24, 128, 203);
+    font-weight: bold;
 }
 p:hover {
     color:rgb(230, 80, 155);
