--- a/movie-api/app/components/search/searchMovie.css
+++ b/movie-api/app/components/search/searchMovie.css
@@ -4,3 +4,15 @@
 .movieOverview {
     color:rgb(237, 241, 244);
 }
+.inputWrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+}
+.searchInput {
+    font-size: x-large;
+    align-items: center;
+    padding:1rem;
+    margin:1rem;
+}
