--- a/movie-api/app/components/searchAll/searchMovie.css
+++ b/movie-api/app/components/searchAll/searchMovie.css
@@ -1,18 +1,28 @@
-.title {
-    color:rgb(107, 242, 242);
-}
-.movieOverview {
-    color:rgb(237, 241, 244);
-}
 .inputWrapper {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column; /* Ensure children stack vertically */
+    align-items: center; /* Center children horizontally */
     margin-top: 20px;
-}
-.searchInput {
+  }
+  
+  .searchInput {
     font-size: x-large;
-    align-items: center;
-    padding:1rem;
-    margin:1rem;
-}
+    padding: 1rem;
+    margin: 1rem;
+    text-align: center;
+  }
+  
+  .searchResults {
+    display: block; /* Ensure search results are displayed as block elements */
+    margin-top: 20px; /* Add margin as needed */
+  }
+  
+  .title {
+    color: rgb(107, 242, 242);
+  }
+  
+  .movieOverview {
+    color: rgb(237, 241, 244);
+  }
+  
+
