--- a/movie-api/app/components/GenreSearch/GenreSearch.css
+++ b/movie-api/app/components/GenreSearch/GenreSearch.css
@@ -1,6 +1,6 @@
 .gridWrap {
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
     grid-gap: 20px;
     justify-content: center;
     margin: 20px 0;
@@ -19,7 +19,7 @@
 }
 .wrapper {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
     gap: 1rem;
     justify-content: center;
     padding-left: 12rem;
@@ -27,7 +27,7 @@
   }
   
   .poster {
-    margin-left: 50px;
+    margin-left: 0;
     position: relative;
     width: 300px;
     margin-bottom:2rem;
@@ -87,3 +87,18 @@
     transition: all 0.3s ease;
     border:single;
   }
+  @media screen and (max-width: 768px) {
+    .gridWrap, .wrapper {
+        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); /* Adjust grid columns for smaller screens */
+        gap:20px;
+    }
+
+    .poster {
+        margin-left: 0; /* Remove left margin for posters */
+        width:150px;
+    }
+
+    .overlay {
+        border-radius: 0; /* Remove border-radius for overlay */
+    }
+}
