--- a/movie-api/app/components/header/header.css
+++ b/movie-api/app/components/header/header.css
@@ -3,15 +3,15 @@
     background-color: rgb(248, 246, 244);
     display:flex;
     justify-content: center;
-    padding: 0.1rem;
-    margin:0 0 1rem 0;
-    border-radius: 10px;
-}
+    padding: 0;
+    margin-bottom:3rem;
+    width:100%;
+    }
 .nav a {
     text-decoration: none; /* Remove default underline from links */
   }
 p {
-    font-size: 40px;
+    font-size: 30px;
     text-decoration: none;
     color: rgb(24, 128, 203);
     font-weight: bold;
@@ -23,7 +23,17 @@ p {
 p:hover {
     color:rgb(50, 222, 191);
 }
+@media screen and (max-width: 768px) {
+    .nav {
+        align-items: center; /* Center items horizontally */
+        width: 100%;
+    }
 
+    p {
+        font-size: 24px; /* Decrease font size for smaller screens */
+        padding: 1rem; /* Adjust padding for smaller screens */
+    }
+}
 
   
   
