--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("../../movie-api/public/coolBackground.png");
+  background-image: url("../public/coolBackground.png");
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
