trialing shadow effects

--- a/app/components/header/header.css
+++ b/app/components/header/header.css
@@ -19,6 +19,10 @@ p {
     padding-bottom:0rem;
     padding-left: 4rem;
     padding-right: 4rem;
+    letter-spacing: .25em;
+    text-shadow: 
+      2px 2px 0px #d5d5d5, 
+      4px 4px 0px rgba(0, 0, 0, 0.2);
 }
 p:hover {
     color:rgb(50, 222, 191);
