--- a/app/components/header/header.css
+++ b/app/components/header/header.css
@@ -1,44 +1,38 @@
 .nav {
-    color: white; 
-    background-color: rgb(248, 246, 244);
-    display:flex;
-    justify-content: center;
-    padding: 0;
-    margin-bottom:3rem;
-    width:100%;
-    }
+  color: white;
+  background-color: rgb(248, 246, 244);
+  display: flex;
+  justify-content: center;
+  padding: 0;
+  margin-bottom: 3rem;
+  width: 100%;
+}
 .nav a {
-    text-decoration: none; /* Remove default underline from links */
-  }
+  text-decoration: none; /* Remove default underline from links */
+}
 p {
-    font-size: 30px;
-    text-decoration: none;
-    color: rgb(24, 128, 203);
-    font-weight: bold;
-    padding-top:0rem;
-    padding-bottom:0rem;
-    padding-left: 4rem;
-    padding-right: 4rem;
-    letter-spacing: .15em;
-    text-shadow: 
-      2px 2px 0px #d5d5d5, 
-      4px 4px 0px rgba(0, 0, 0, 0.2);
+  font-size: 30px;
+  text-decoration: none;
+  color: rgb(24, 128, 203);
+  font-weight: bold;
+  padding-top: 0rem;
+  padding-bottom: 0rem;
+  padding-left: 4rem;
+  padding-right: 4rem;
+  letter-spacing: 0.15em;
+  text-shadow: 2px 2px 0px #d5d5d5, 4px 4px 0px rgba(0, 0, 0, 0.2);
 }
 p:hover {
-    color:rgb(50, 222, 191);
+  color: rgb(50, 222, 191);
 }
 @media screen and (max-width: 768px) {
-    .nav {
-        align-items: center; /* Center items horizontally */
-        width: 100%;
-    }
+  .nav {
+    align-items: center; /* Center items horizontally */
+    width: 100%;
+  }
 
-    p {
-        font-size: 24px; /* Decrease font size for smaller screens */
-        padding: 1rem; /* Adjust padding for smaller screens */
-    }
+  p {
+    font-size: 24px; /* Decrease font size for smaller screens */
+    padding: 1rem; /* Adjust padding for smaller screens */
+  }
 }
-
-  
-  
-  
