--- a/app/components/main/main.css
+++ b/app/components/main/main.css
@@ -1,9 +1,19 @@
+@font-face {
+  font-family: 'League Gothic';
+  src: url('../../../public/fonts/LeagueGothic-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+
+
 .info {
     justify-content: center;
     text-align: center;
     color: rgb(249, 249, 250);
     font-size: 6rem;
-    font-family: var(--font-inter);
+    font-family: 'League Gothic', sans-serif;
     border-style: single;
     background-color: transparent;
     width:1500px;
@@ -15,25 +25,6 @@
     vertical-align: middle;
     align-items: center;
     padding: 4rem;
-    color: #f9f8f7;
-    letter-spacing: .1em;
-    text-shadow: 
-      0 -1px 0 #fff, 
-      0 1px 0 #2e2e2e, 
-      0 2px 0 #2c2c2c, 
-      0 3px 0 #2a2a2a, 
-      0 4px 0 #282828, 
-      0 5px 0 #262626, 
-      0 6px 0 #242424, 
-      0 7px 0 #222, 
-      0 8px 0 #202020, 
-      0 9px 0 #1e1e1e, 
-      0 10px 0 #1c1c1c, 
-      0 11px 0 #1a1a1a, 
-      0 12px 0 #181818, 
-      0 13px 0 #161616, 
-      0 14px 0 #141414, 
-      0 15px 0 #121212, 
-      0 22px 30px rgba(0, 0, 0, 0.9);
-  }
+    color: rgb(180,59,60);
+    }
   
